--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,6 +124,7 @@ header {
 #email-me {
     background-color: transparent;
     padding: 10px;
+    margin-top: 5px;
     border: 2px solid gray;
 
 }
