--- a/templates/home/home-page.html
+++ b/templates/home/home-page.html
@@ -4,7 +4,7 @@
 
     <header>
         <div id='nav-body'>
-            <ul>
+            <ul class="container">
                 <li><a href="">Portraits</a></li>
                 <li><a href="">Weddings</a></li>
                 <li><a href="">Food</a></li>
@@ -15,8 +15,8 @@
     </header>
 
     <section id="landing">
-        <div id="landing-content">
-            <h1 id="brand">Roberto Avallone Photgrapher.</h1>
+        <div id="landing-content"  class="container">
+            <h1 id="brand">Roberto Avallone<br>Photographer.</h1>
             <a id="email-me">Contact Me</a>
         </div>
     </section>
