--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <title>Roberto Photohraphy</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Roboto+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Caudex|Cinzel+Decorative|Cutive|Laila|Niconne|Sniglet" rel="stylesheet">
 
     <link rel="stylesheet" href="/static/css/style.css">
 
