--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/css/style.css">
 
 </head>
-<body>
+<body class="gradient-back">
 
 {% block base %}
 
@@ -20,9 +20,7 @@
 
 
     <script type="text/javascript" src="/static/js/jquery.js"></script>
-    <script type="text/javascript">
-        $('a').addClass('link')
-    </script>
+
 
     {% block body_js %}
 
