--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -44,21 +44,27 @@ h1, p, a, button {
     font-family: 'Raleway', sans-serif;
 }
 
-html {
-    background-image: linear-gradient(to top right, rgba(24, 24, 24, 0.4), rgba(255, 255, 255, 0.4)), url("/static/camera-macro-optics-122400.jpg");
+body {
+    line-height: 1.4;
+}
 
+.gradient-back {
+    background-image: linear-gradient(to top right, rgba(24, 24, 24, 0.4), rgba(255, 255, 255, 0.4));
     position: relative;
     float: left;
     background-position: 50% 10%;
     background-repeat: no-repeat;
     background-size: cover;
-    margin-bottom: 15px;
 }
 
+.image-back {
+    background-image: linear-gradient(to top right, rgba(24, 24, 24, 0.4), rgba(255, 255, 255, 0.4)), url("/static/camera-macro-optics-122400.jpg");
+    position: relative;
+    float: left;
+    background-position: 50% 10%;
+    background-repeat: no-repeat;
+    background-size: cover;
 
-body {
-    min-height: 100vh;
-    line-height: 1.4;
 }
 
 
@@ -96,13 +102,14 @@ body {
         bottom: 5px;
     }
 
-    .container {
-        width: 70%;
-        margin: 0 auto;
-    }
+.container {
+    width: 70%;
+    margin: 0 auto;
+}
 /* Header */
 
 header {
+    width: 100vw;
     padding: 20px 0;
     display: flex;
     flex-direction: column;
@@ -142,12 +149,12 @@ header {
 /* Landing */
 
 #landing {
-    height: 90vh;
-    width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    height: calc(100vh - 86.8px);
 }
 
 #landing-content {
@@ -166,4 +173,20 @@ header {
     margin-top: 17px;
     border: 2px solid #000000;
 
+}
+
+.gallery-img {
+    max-height: 500px;
+    width: 333px;
+    height: 500px;
+    min-height: 200px;
+    padding-top: 5px;
+}
+
+#portrait-gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 50px;
+    justify-content: center;
 }
