--- a/templates/home/home-page.html
+++ b/templates/home/home-page.html
@@ -6,7 +6,7 @@
 
     {% block body_js %}
         <script type="text/javascript">
-            $('body').addClass('image-back')
+            $('html').addClass('image-back')
         </script>
     {% endblock %}
 
