--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="gradient-back">
 <head>
     <meta charset="UTF-8">
     <title>Roberto Photohraphy</title>
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/css/style.css">
 
 </head>
-<body class="gradient-back">
+<body>
 
 {% block base %}
 
