--- a/templates/home/landing.html
+++ b/templates/home/landing.html
@@ -1,3 +1,5 @@
+<div class="parallax">
+
 
     <section id="landing">
         <div id="landing-content"  class="container">
@@ -5,4 +7,51 @@
             <a href="" id="email-me" class="link">Contact Me</a>
         </div>
     </section>
-    
+
+    <section id="intro" class="background-gradient">
+
+
+            {% for cate in categories %}
+                <article class="category container">
+
+                    <h1 class="title">About My Work</h1>
+
+                    <div class="category-text">
+                        <h2 class="title">{{ cate }}</h2>
+                        <p> {{ cate.description }}</p>
+                    </div>
+
+                    <div class="category-imgs">
+                        {% for project in projects %}
+                            {% if project.category == cate %}
+                                <a href="" class="link"><img class="slide-imgs" src="{{ project.image1.url }}"></a>
+
+                                {% if project.image2 %}
+                                    <a href="" class="link"><img class="slide-imgs" src="{{ project.image2.url }}"></a>
+                                {% endif %}
+
+                                {% if project.image3 %}
+                                    <a href="" class="link"><img class="slide-imgs" src="{{ project.image3.url }}"></a>
+                                {% endif %}
+
+                                {% if project.image4 %}
+                                    <a href="" class="link"><img class="slide-imgs" src="{{ project.image4.url }}"></a>
+                                {% endif %}
+
+                                {% if project.image5 %}
+                                    <a href="" class="link"><img class="slide-imgs" src="{{ project.image5.url }}"></a>
+                                {% endif %}
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                </article>
+            {% endfor %}
+
+    </section>
+
+
+</div>
+
+
+
+
