Home Project Info

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -273,6 +273,7 @@ header {
 
 .category {
     padding: 10px 0;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
