--- a/templates/home/landing.html
+++ b/templates/home/landing.html
@@ -10,42 +10,45 @@
 
     <section id="intro" class="background-gradient">
 
-        <article class="category container">
-
+        <div class="container">
             <h1 class="title">About My Work</h1>
 
-            {% for cate in categories %}
+            <article class="category">
 
-                <div class="category-text">
-                    <h2 class="title">{{ cate }}</h2>
-                    <p> {{ cate.description }}</p>
-                </div>
 
-                <div class="category-imgs">
-                    {% for project in projects %}
-                        {% if project.category == cate %}
-                            <a href="" class="link"><img class="slide-imgs" src="{{ project.image1.url }}"></a>
+                {% for cate in categories %}
 
-                            {% if project.image2 %}
-                                <a href="" class="link"><img class="slide-imgs" src="{{ project.image2.url }}"></a>
+                    <div class="category-text">
+                        <h2 class="title">{{ cate }}</h2>
+                        <p> {{ cate.description }}</p>
+                    </div>
+
+                    <div class="category-imgs">
+                        {% for project in projects %}
+                            {% if project.category == cate %}
+                                <a href="" class="link"><img class="slide-imgs" src="{{ project.image1.url }}"></a>
+
+                                {% if project.image2 %}
+                                    <a href="" class="link"><img class="slide-imgs" src="{{ project.image2.url }}"></a>
+                                {% endif %}
+
+                                {% if project.image3 %}
+                                    <a href="" class="link"><img class="slide-imgs" src="{{ project.image3.url }}"></a>
+                                {% endif %}
+
+                                {% if project.image4 %}
+                                    <a href="" class="link"><img class="slide-imgs" src="{{ project.image4.url }}"></a>
+                                {% endif %}
+
+                                {% if project.image5 %}
+                                    <a href="" class="link"><img class="slide-imgs" src="{{ project.image5.url }}"></a>
+                                {% endif %}
                             {% endif %}
-
-                            {% if project.image3 %}
-                                <a href="" class="link"><img class="slide-imgs" src="{{ project.image3.url }}"></a>
-                            {% endif %}
-
-                            {% if project.image4 %}
-                                <a href="" class="link"><img class="slide-imgs" src="{{ project.image4.url }}"></a>
-                            {% endif %}
-
-                            {% if project.image5 %}
-                                <a href="" class="link"><img class="slide-imgs" src="{{ project.image5.url }}"></a>
-                            {% endif %}
-                        {% endif %}
-                    {% endfor %}
-                </div>
-            {% endfor %}
-        </article>
+                        {% endfor %}
+                    </div>
+                {% endfor %}
+            </article>
+        </div>
     </section>
 </div>
 
