--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -160,6 +160,19 @@ header {
 }
 
 
+#socials {
+    margin-top: 25px;
+    width: 15%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.social-link {
+    height: 30px;
+    width: 30px;
+}
+
+
 
 /* Landing */
 
@@ -216,6 +229,7 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
     flex-wrap: wrap;
 }
 
@@ -286,4 +300,10 @@ header {
     align-items: center;
 
     margin-top: 25px;
+}
+
+#audio2{
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
 }
