--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -4,6 +4,8 @@
 
     {% include 'base/header.html' %}
 
+    {% include 'base/messages.html' %}
+
     <section id="content">
 
         {% block content %}
