--- a/templates/home/landing.html
+++ b/templates/home/landing.html
@@ -19,7 +19,7 @@
                 <article class="category">
 
                     <div class="category-text">
-                        <h2 class="title">{{ cate }}</h2>
+                        <h2>{{ cate }}</h2>
                         <p> {{ cate.description }}</p>
                     </div>
 
