--- a/templates/home/home-page.html
+++ b/templates/home/home-page.html
@@ -4,6 +4,8 @@
 
     {% include 'home/landing.html' %}
 
+    {% include 'contact-form.html' %}
+
     {% block body_js %}
         <script type="text/javascript">
             $('body').addClass('image-back')
