--- a/templates/home/landing.html
+++ b/templates/home/landing.html
@@ -8,7 +8,7 @@
         </div>
     </section>
 
-    <section id="intro" class="background-gradient">
+    <section id="intro" class="page background-gradient">
 
         <div class="container">
 
