--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Roboto+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Caudex|Cinzel+Decorative|Cutive|Laila|Niconne|Sniglet" rel="stylesheet">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/reset.css">
     <link rel="stylesheet" href="/static/css/style.css">
 
 
