--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,7 +58,7 @@ body {
     /* The image used */
     background-image: linear-gradient(to top right, rgba(24, 24, 24, 0.4), rgba(255, 255, 255, 0.4));
     /* Set a specific height */
-    min-height: 90vh;
+    min-height: 100vh;
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
@@ -69,14 +69,14 @@ body {
 
 
 .page {
-    min-height: 25vh;
+    min-height: 50vh;
     padding: 25px 0;
 }
 
 
 .gradient-back {
 
-    background-image: linear-gradient(to top right, rgba(134, 134, 134, 0.14), rgba(255, 255, 255, 0.4));
+    background-image: linear-gradient(to top right, rgba(255, 255, 255, 1), rgb(180, 180, 180));
     position: relative;
     float: left;
     background-position: 50% 10%;
@@ -85,10 +85,10 @@ body {
 }
 
 .background-gradient{
-    background-image: linear-gradient(to top right, rgba(24, 24, 24, 0.4), rgba(255, 255, 255, 0.4));
+    background-image: linear-gradient(to top right, rgba(255, 255, 255, 1), rgb(180, 180, 180));
 }
 .image-back {
-    background-image: linear-gradient(to top right, rgba(24, 24, 24, 0.4), rgba(255, 255, 255, 0.4)), url("/static/camera-macro-optics-122400.jpg");
+    background-image: url("/static/camera-macro-optics-122400.jpg");
 }
 
 
@@ -137,7 +137,7 @@ body {
 /* Header */
 
 header {
-    width: 100vw;
+    width: 100%;
     padding: 20px 0;
     display: flex;
     flex-direction: column;
@@ -300,10 +300,6 @@ h2 {
 }
 
 
-#intro {
-    background-color: #ffffff;
-}
-
 .category {
     padding: 10px 0;
     margin-top: 10px;
@@ -324,7 +320,7 @@ h2 {
 #audio2{
     position: fixed;
     bottom: 0;
-    width: 100vw;
+    width: 100%;
 }
 
 #contact {
@@ -354,4 +350,48 @@ background-color: rgba(255, 255, 255, 0.69);
 
 #tick {
     margin-right: 10px;
+}
+
+
+
+.project-img {
+
+    min-width: 250px;
+
+
+    width:auto ;
+    height: auto;
+
+
+
+    max-width: 1000px;
+
+    background-position: 50% 10%;
+    background-repeat: no-repeat;
+    background-size: contain;
+
+}
+
+.project-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 40px 0;
+    text-align: justify
+}
+
+.project-item:nth-child(even){
+    flex-direction: row-reverse;
+}
+.project-item:nth-child(even) .project-img {
+    margin-left: 20px;
+
+}
+.project-item:nth-child(odd) .project-img {
+    margin-right: 20px;
+
+}
+.project-item:nth-child(odd){
+    flex-direction: row;
 }
