--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -5,7 +5,7 @@
                 <li><a href="{% url 'home' %}" class="link">Home</a></li>
 
                 {% for category in categories %}
-                    <li><a href="{% url 'project' category %}" class="link">{{ category }}</a></li>
+                    <li><a href="{% url 'category' category %}" class="link">{{ category }}</a></li>
                 {% endfor %}
             </ul>
         </div>
