--- a/templates/gallery/gallery.html
+++ b/templates/gallery/gallery.html
@@ -3,37 +3,39 @@
 
 {% block content %}
 
-    <section id="portrait-gallery">
+    <section id="portrait-gallery" class="container">
 
         {% for project in projects %}
 
             <div class="gallry-prj">
-                <h1 class="title">{{ project.title }}</h1>
+                <a href="{% url 'project' project.category project.id %}" class="link"><h1  class="title">{{ project.title }}</h1></a>
 
                 <div class="gallery-prj-imgs">
 
-                     <a href="" class="link"><img class="gallery-img" src="{{ project.image1.url }}"></a>
+                    <a href="{% url 'project' project.category project.id %}" class="link"><img class="gallery-img" src="{{ project.image1.url }}"></a>
 
                     {% if project.image2 %}
-                        <a href="" class="link"><img class="gallery-img" src="{{ project.image2.url }}"></a>
+                        <a href="{% url 'project' project.category project.id %}" class="link"><img class="gallery-img" src="{{ project.image2.url }}"></a>
                     {% endif %}
 
                     {% if project.image3 %}
-                        <a href="" class="link"><img class="gallery-img" src="{{ project.image3.url }}"></a>
+                        <a href="{% url 'project' project.category project.id %}" class="link"><img class="gallery-img" src="{{ project.image3.url }}"></a>
                     {% endif %}
 
                     {% if project.image4 %}
-                        <a href="" class="link"><img class="gallery-img" src="{{ project.image4.url }}"></a>
+                        <a href="{% url 'project' project.category project.id %}" class="link"><img class="gallery-img" src="{{ project.image4.url }}"></a>
                     {% endif %}
 
                     {% if project.image5 %}
-                        <a href="" class="link"><img class="gallery-img" src="{{ project.image5.url }}"></a>
+                        <a href="{% url 'project' project.category project.id %}" class="link"><img class="gallery-img" src="{{ project.image5.url }}"></a>
                     {% endif %}
                 </div>
             </div>
         {% endfor %}
 
     </section>
+
+
 
 
 {% endblock %}
