--- a/templates/home/landing.html
+++ b/templates/home/landing.html
@@ -1,4 +1,3 @@
-<div class="parallax">
 
 
     <section id="landing">
@@ -19,29 +18,29 @@
                 <article class="category">
 
                     <div class="category-text">
-                        <h2>{{ cate }}</h2>
+                        <a href="{% url 'category' cate %}"><h2  class="link">{{ cate }}</h2></a>
                         <p> {{ cate.description }}</p>
                     </div>
 
                     <div class="category-imgs">
                         {% for project in projects|slice:'1' %}
                             {% if project.category == cate %}
-                                <a href="" class="link"><img class="slide-imgs" src="{{ project.image1.url }}"></a>
+                                <a href="{% url 'category' cate %}" class="link"><img class="slide-imgs" src="{{ project.image1.url }}"></a>
 
                                 {% if project.image2 %}
-                                    <a href="" class="link"><img class="slide-imgs" src="{{ project.image2.url }}"></a>
+                                    <a href="{% url 'category' cate %}" class="link"><img class="slide-imgs" src="{{ project.image2.url }}"></a>
                                 {% endif %}
 
                                 {% if project.image3 %}
-                                    <a href="" class="link"><img class="slide-imgs" src="{{ project.image3.url }}"></a>
+                                    <a href="{% url 'category' cate %}" class="link"><img class="slide-imgs" src="{{ project.image3.url }}"></a>
                                 {% endif %}
 
                                 {% if project.image4 %}
-                                    <a href="" class="link"><img class="slide-imgs" src="{{ project.image4.url }}"></a>
+                                    <a href="{% url 'category' cate %}" class="link"><img class="slide-imgs" src="{{ project.image4.url }}"></a>
                                 {% endif %}
 
                                 {% if project.image5 %}
-                                    <a href="" class="link"><img class="slide-imgs" src="{{ project.image5.url }}"></a>
+                                    <a href="{% url 'category' cate %}" class="link"><img class="slide-imgs" src="{{ project.image5.url }}"></a>
                                 {% endif %}
                             {% endif %}
                         {% endfor %}
@@ -50,7 +49,13 @@
             {% endfor %}
         </div>
     </section>
-</div>
+
+
+    {% block body_js %}
+        <script type="text/javascript">
+            $('#content').removeClass('background-gradient').addClass('parallax');
+        </script>
+    {% endblock %}
 
 
 
