--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en" class="gradient-back">
+<html lang="en" class="">
 <head>
     <meta charset="UTF-8">
     <title>Roberto Photohraphy</title>
@@ -15,14 +15,16 @@
  <script type="text/javascript" src="/static/js/jquery.js"></script>
 
 </head>
+
 <body>
 
-{% block base %}
+<div id="content" class="background-gradient">
 
-{% endblock %}
+    {% block base %}
 
+    {% endblock %}
 
-
+</div>
 
 
     {% block body_js %}
