--- a/static/css/style.css
+++ b/static/css/style.css
@@ -221,7 +221,7 @@ header {
     width: auto;
     max-width: 700px;
     padding-top: 5px;
-    margin: 0 2px;
+    margin: 10px 5px;
 }
 
 #portrait-gallery {
