--- a/templates/home/landing.html
+++ b/templates/home/landing.html
@@ -53,7 +53,7 @@
 
     {% block body_js %}
         <script type="text/javascript">
-            $('#content').removeClass('background-gradient').addClass('parallax');
+            $('#content').removeClass('background-gradient').addClass('parallax').css('background-image', 'url({{ background.image.url }})');
         </script>
     {% endblock %}
 
